# youtube-strategy-validator

./: .gitignore  .replit  README.md  analyzer.py  app.py  app_backup_working.py  app_dev.py  app_dev_working.py  db.py  extractors.py  leaderboard.csv  models.py  pyproject.toml  reports.py  requirements.txt  strategy_validator.db  urls.txt
reports/: qLtq73bTPBA_20260514_231304_strategy_report.json  qLtq73bTPBA_20260514_231752_strategy_report.json  qLtq73bTPBA_20260515_113658_strategy_report.json
templates/: analysis.html  history.html  index.html
